--- a/src/main/resources/templates/add-product.html
+++ b/src/main/resources/templates/add-product.html
@@ -35,11 +35,14 @@
                         <input type="text" th:field="*{currency}" class="form-control" id="currency" placeholder="Currency">
                         <span th:if="${#fields.hasErrors('currency')}" th:errors="*{currency}" class="text-danger"></span>
                     </div>
-                    <div class="form-group col-md-6">
-                        <label for="category" class="col-form-label">Category</label>
-                        <input type="text" th:field="*{category}" class="form-control" id="category" placeholder="Category">
-                        <span th:if="${#fields.hasErrors('category')}" th:errors="*{category}" class="text-danger"></span>
-                    </div>
+                    <label>Category</label>
+                    <!-- <label for="category" class="col-form-label">Category</label>
+                    <input type="text" th:field="*{category}" class="form-control" id="category" placeholder="Category">
+                    <span th:if="${#fields.hasErrors('category')}" th:errors="*{category}" class="text-danger"></span>-->
+                    <select name="category">
+                        <option th:each="categoryOpt : ${T(com.sda.andreimanea.webshop.model.ProductCategory).values()}"
+                                th:value="${categoryOpt}" th:text="${categoryOpt.displayValue}"></option>
+                    </select>
                 </div>
                 <div class="row">
                     <div class="col-md-6 mt-5">
